Work on layout/design

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">Kinematics</string>
+
+    <string name="time">Time (s)</string>
+    <string name="acceleration"><![CDATA[Acceleration (m/s<sup>2</sup>)]]></string>
+    <string name="v_initial"><![CDATA[Velocity<sub>i</sub> (m/s)]]></string>
+    <string name="v_final"><![CDATA[Velocity<sub>f</sub> (m/s)]]></string>
+    <string name="delta_x">Δx (m)</string>
+
 </resources>
